--- a/custard/app/views/facilities/prod_list.html.erb
+++ b/custard/app/views/facilities/prod_list.html.erb
@@ -26,8 +26,8 @@ function setupPage()
 
 <%= select("post", :facility_id,  options_for_select(Facility.pluck(:name, :id),@facid)) %>
 
-<h1><%= @facility.name %></h1>
-<h2><%= @facility.address %></h2>
+<h1><%= @facility!=nil ? @facility.name : 'none' %></h1>
+<h2><%= @facility!=nil ? @facility.address : 'none' %></h2>
 
 
 <table class="prod_table"  >
@@ -41,6 +41,7 @@ function setupPage()
     </tr>
   </thead>
   <tbody>
+    <% if @prd != nil %>
     <% @prd.each do |product| %>
       <tr class="<%= product.state %>">
         <td><%= product.flavor %></td>
@@ -49,6 +50,7 @@ function setupPage()
         <td><%= product.packaged %></td>
         <td><%= product.opened %></td>
       </tr>
+    <% end %>
     <% end %>
   </tbody> 
 </table>             
